<resources>
    <string name="app_name">DISH</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dish">Dish</string>
    <string name="logout">Logout</string>
    <string name="hello_first_name_last_name"><![CDATA[Hello, <First name> <Last name>]]></string>
    <string name="get_custom_menu">Get Custom Menu</string>
    <string name="search">Search</string>
    <string name="rate_recommendation">Rate Recommendation</string>
    <string name="title_activity_to_delete_later">ToDeleteLater</string>
    <string name="settings">Settings</string>
    <string name="swipe_to_improve">Swipe to improve</string>
    <string name="sign_in_with_google">sign in with google</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="first_time_here">First time here?</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="register">Register</string>
    <string name="wifi_btn">Show Restaurants in WIFI range</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="default_web_client_id" />-->
    <!--    <string name="default_web_client_id" />-->
    \
</resources>