<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/search" />

        <item
            android:id="@+id/nav_get_custom_menu"
            android:icon="@drawable/ic_baseline_restaurant_menu_24"
            android:title="@string/get_custom_menu" />

        <item
            android:id="@+id/nav_rate_recommendation"
            android:icon="@drawable/ic_baseline_star_rate_24"
            android:title="@string/rate_recommendation" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_swipe_dishes"
                android:icon="@drawable/ic_swipe"
                android:title="@string/swipe_to_improve" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>