<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.postpc.dish.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.postpc.dish.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/search_fragment" />

    <fragment
        android:id="@+id/nav_get_custom_menu"
        android:name="com.postpc.dish.GetCustomMenuFragment"
        android:label="@string/get_custom_menu"
        tools:layout="@layout/get_custom_menu_fragment" />

    <fragment
        android:id="@+id/nav_rate_recommendation"
        android:name="com.postpc.dish.RateRecommendationFragment"
        android:label="@string/rate_recommendation"
        tools:layout="@layout/rate_recommendation_fragment" />

</navigation>